Cambio en estilo del catalogo

--- a/src/app/pages/productos/producto-detalle/producto.component.html
+++ b/src/app/pages/productos/producto-detalle/producto.component.html
@@ -10,8 +10,7 @@
             </GridLayout>
         </StackLayout>
 
-
-        <MDCardView height="100%" width="100%">
+        <MDCardView>
             <StackLayout>
 
                 <StackLayout class="card-layout-description-p">
@@ -19,7 +18,6 @@
                     <StackLayout class="hr-light m-b-12"></StackLayout>
                     <Label class="body" textWrap="true" [text]="descripcion"></Label>
                 </StackLayout>
-
 
                 <GridLayout rows="*" columns="*,*">
 
