--- a/src/app/pages/tabs-nav/tabs-nav.component.css
+++ b/src/app/pages/tabs-nav/tabs-nav.component.css
@@ -4,6 +4,10 @@ Image {
     font-size: 12;
 }
 
+TabStripItem {
+    background-color: #ffffff;
+}
+
 TabStripItem:active Label {
     color: #ef424c;
 }
