Arreglando error de sintaxis

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -14,7 +14,7 @@
                 <Label row="1" col="0" class="ico wt" [text]="_utilService.icontWtsapp"></Label>
                 <Label row="1" col="1" class="label black" [text]="phone_numbers"></Label>
                 <Label row="2" col="0" class="ico lc" [text]="_utilService.iconLocation"></Label>
-                <Label row="2" col="1" clastns="label black" [text]="address" textWrap="true"></Label>
+                <Label row="2" col="1" class="label black" [text]="address" textWrap="true"></Label>
                 <Label row="3" col="0" class="ico if" [text]="_utilService.iconInfo"></Label>
                 <Label row="3" col="1" class="label" [text]="information" textWrap="true"></Label>
                 <Label row="4" col="0" class="ico if" [text]="_utilService.iconInfo"></Label>
