--- a/src/app/pages/cotizaciones/cotizaciones.component.html
+++ b/src/app/pages/cotizaciones/cotizaciones.component.html
@@ -32,7 +32,7 @@
 
                     </GridLayout>
 
-                    <Button class="btn btn-flat btn-active ico icon-rigth-arrow" row="0" col="2" [text]="_utilService.iconArrowRight"></Button>
+                    <Button class="btn btn-flat btn-active ico icon-rigth-arrow" row="0" col="2" [text]="_utilService.iconArrowRight" [nsRouterLink]="['/pages/detalles', cotizacion._id]"></Button>
 
                 </GridLayout>
 
